syntax = "proto3";

package pb;
option go_package = "../pb";




// 心跳, gateway 通知游戏服，每2秒发送
message PingRequest {
}

// 心跳, gateway 通知游戏服，每2秒发送
message PingResponse {
    int32 code = 1;
    string msg = 2;
}

message CommonHead {
    string gameId = 1;
    string roomId = 2;
    string uid = 3;
    string pid = 4;
    int64  sn = 5;
    int64  timestamp = 6;
    string pbName = 7;
    string gatewayIp   = 8;

}

message GameCommonRequest{
    CommonHead head = 1;
    string data = 2;
}


message GameCommonResponse{
    int32 code = 1;
    string msg = 2;
    CommonHead head = 3;
    string data = 4;
}


message PushHead {
    string gameId = 1;
    string roomId = 2;
    string uid = 3;
    string pid = 4;
    int64  sn = 5;
    int64  timestamp = 6;
    string pbName = 7;
}

message GamePushMessage{
    PushHead head = 1;
    string data = 2;
}

//进入大厅
message LoginHallRequest{

}

//进入大厅应答
message LoginHallResponse{
    int32 code = 1;
    string msg = 2;
    bool  jumpGame = 3;
    string roomId = 4;
    string opt = 5;
}
