syntax = "proto3";

package pb;
option go_package = "../pb";

//进入大厅
message LoginHallRequest{
  string gameId = 1;
  string pid = 2;
  string uid = 3;
}


//进入大厅应答
message LoginHallResponse{
  int32 code = 1;
  string msg = 2;
  string gameId = 3;
  string pid = 4;
  string uid = 5;
  string roomId = 6;
  string groupName = 7;
}



//匹配申请
message MatchRequest{
  string gameId = 1;
  string pid = 2;
  string uid = 3;
  int64 timeStamp = 4;
  int32 score = 5;
  string receiveSubject = 6;
  string opt  = 7; //匹配保留字段  hall 代表进入大厅 否则就是进入room
}

// 返回：匹配应答
message MatchResponse {
  int32 code = 1;
  string msg = 2;
}

// 请求：取消匹配
message CancelMatchRequest {
  string gameId = 1;
  string uid = 2;
  string pid = 3;
}

// 返回：取消匹配
message CancelMatchResponse {
  int32 code = 1;
  string msg = 2;
}

message MatchData {
   string uid = 1;
   string pid = 2;
}

// 匹配结果通知
message MatchOverRes {
  int32 code = 1;             // 0：匹配成功  1：匹配超时
  string msg = 2;

  string gameId = 3;
  string uid = 4;
  string pid = 5;
  string roomId = 6;          // 新的roomId
  string groupName = 7;
  int64 timestamp = 8;        // 服务器时间戳（毫秒）
  string opt = 9;             // 透传字段
  string sign = 10;            // 签名
  repeated MatchData uidList = 11;  //匹配玩家信息
  repeated MatchData aiUidList = 12;  //ai Uid
}


